changed UI CSS and started with logic

--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,10 @@
 
 }
 .header-logo{
-  animation: App-logo-spin infinite 20s linear;
-  padding: 3vh;
+  /*  animation: App-logo-spin infinite 20s linear;*/
+  padding: 2vh;
+  align-items: center;
+  margin-right: 5%;
 
 }
 .register{
