--- a/src/styles/registration.scss
+++ b/src/styles/registration.scss
@@ -1,4 +1,4 @@
-.login{
+.registration{
     margin-top: 40px;
     border: rgb(76, 14, 177) 1px solid;
     width:75%;
@@ -7,7 +7,7 @@
     display: flex;
     flex-wrap: wrap;
     padding: 2vw;
-    margin-left: 10%;
+    margin-left: 12%;
    
 
     .heading{
