withdraw and deposit functionality development

--- a/src/styles/userloggedin.scss
+++ b/src/styles/userloggedin.scss
@@ -33,15 +33,12 @@
 
    .depositClassName{
         margin-left: 70%;
+        background-color:#778284 ;
     }
 
-    .depositClassName:active{color:black}
+    .depositClassName:active{color:rgb(233, 15, 15)}
     
     .submitClassName{
         margin-left: 53%;
         background-color: #0a1979;
-    }
-
-    .withdrawClassName{
-
     }
