--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -28,3 +28,10 @@
             flex-direction: row;
         }
 }
+.validationMessage{
+    color: red;
+    font-size: 16px;
+   margin-left: 30%;
+    text-align: center;
+
+}
