added new UI to the application. Fixem empty login button issue. Logout system working

--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -19,4 +19,9 @@
       width: 70% !important;
     }
   }
+  .RegistrationSuccess{
+    color: rgb(18, 156, 18);
+    font-size: 18px;
+    text-align: center;
+  }
   
