--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -2,8 +2,10 @@
     margin-top: 40px;
     border: rgb(76, 14, 177) 1px solid;
     width:75%;
-    height: 80%;
-    background-color: rgb(150, 184, 248);
+    height: 55vh;
+   // background-color: rgb(150, 184, 248);
+    background-color: #000f3d;
+    background-image: url("https://www.transparenttextures.com/patterns/carbon-fibre-big.png");
     display: flex;
     flex-wrap: wrap;
     padding: 2vw;
@@ -12,6 +14,7 @@
 
     .heading{
         width:100%;
+        color: white;
     }
      .inputs, .buttons{
         width:100%;
@@ -20,8 +23,11 @@
         flex-direction:column;
         justify-content: center;
         align-items: center;
+        color: white;
+       
         input{
             width:60%
+            
         }
         }
         .buttons{
@@ -29,9 +35,14 @@
         }
 }
 .validationMessage{
-    color: red;
+    color:  white;
+    background-color: rgb(146, 21, 21);
     font-size: 16px;
-   margin-left: 30%;
+   margin-left: 35%;
     text-align: center;
 
 }
+.header{
+    background-color: #000f3d;
+}
+
