added css to the main app file and added new file for transfer feature

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -2,9 +2,10 @@
     margin-top: 40px;
     border: rgb(76, 14, 177) 1px solid;
     width:75%;
-    height: 55vh;
+    height: 80%;
+    border: 2px solid white;
    // background-color: rgb(150, 184, 248);
-    background-color: #000f3d;
+    background-color: #0b063a00;
     background-image: url("https://www.transparenttextures.com/patterns/carbon-fibre-big.png");
     display: flex;
     flex-wrap: wrap;
