--- a/src/styles/registration.scss
+++ b/src/styles/registration.scss
@@ -3,7 +3,7 @@
     border: rgb(76, 14, 177) 1px solid;
     width:75%;
     height: 60vh;
-    background-color: #000f3d;
+    background-color: #0b063a00;
     background-image: url("https://www.transparenttextures.com/patterns/carbon-fibre-big.png");
     display: flex;
     flex-wrap: wrap;
