--- a/src/styles/userloggedin.scss
+++ b/src/styles/userloggedin.scss
@@ -1,7 +1,7 @@
 .loggedIn{
-    background-color: #000f3d;
+    background-color: #0b063a00;
     background-image: url("https://www.transparenttextures.com/patterns/carbon-fibre-big.png");
-
+    border: solid 2px white;
     height: 70vh;
     width: 70vw;
     margin-left: 15%;
