--- a/src/styles/userloggedin.scss
+++ b/src/styles/userloggedin.scss
@@ -11,7 +11,7 @@
         text-align: center;
         color: white;
         padding: 10px;
-        background-color: #000f3d;
+        //background-color: #000f3d;
 
     }
 
