changes to UI, back button working in transfer page. Merged few function and state into one. Deleted useless lone of codes

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -2,7 +2,7 @@
     margin-top: 40px;
     border: rgb(76, 14, 177) 1px solid;
     width:75%;
-    height: 80%;
+    height:70%;
     border: 2px solid white;
    // background-color: rgb(150, 184, 248);
     background-color: #0b063a00;
@@ -47,3 +47,6 @@
     background-color: #000f3d;
 }
 
+.userList{
+    color: rgb(129, 109, 109);
+}
