--- a/src/styles/registration.scss
+++ b/src/styles/registration.scss
@@ -39,3 +39,9 @@
     text-align: center;
     margin-left: 35%;
 }
+.RegistrationSuccess{
+    color: rgb(18, 156, 18);
+    font-size: 18px;
+    text-align: center;
+  }
+  
