--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -10,6 +10,7 @@
     }
     textarea {
       width: 30vw;
+      color: red;
     }
     .input-label {
       width: 30%;
@@ -19,9 +20,4 @@
       width: 70% !important;
     }
   }
-  .RegistrationSuccess{
-    color: rgb(18, 156, 18);
-    font-size: 18px;
-    text-align: center;
-  }
-  
+ 
