--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -3,18 +3,21 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 1vh;
+    padding: 2vh;
     font-size: inherit;
+    
     input {
       width: 30vw;
+      background-color: rgb(199, 199, 199);
+      border-radius: 5px;
     }
     textarea {
       width: 30vw;
-      color: red;
     }
     .input-label {
       width: 30%;
       text-align: right;
+      
     }
     .input-content {
       width: 70% !important;
