--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -2,7 +2,7 @@
     margin-top: 40px;
     border: rgb(76, 14, 177) 1px solid;
     width:75%;
-    height:70%;
+    height:100%;
     border: 2px solid white;
    // background-color: rgb(150, 184, 248);
     background-color: #0b063a00;
@@ -47,11 +47,23 @@
 
 }
 .header{
-    background-color: #000f3d;
+    background-color: #02103ad8;
+}
+
+.heading{
+    text-align: center;
 }
 
 .userList{
-    margin-top: 5px;
+    margin-top:3%;
     color: rgb(129, 109, 109);
    text-align: center;
 }
+.RegistrationSuccess{
+    color: rgb(18, 156, 18);
+    font-size: 18px;
+    text-align: center;
+    margin-top: 1%;
+
+  }
+  
