--- a/src/styles/userloggedin.scss
+++ b/src/styles/userloggedin.scss
@@ -3,8 +3,8 @@
     background-image: url("https://www.transparenttextures.com/patterns/carbon-fibre-big.png");
     border: solid 2px white;
     height: 60vh;
-    width: 60vw;
-    margin-left: 20%;
+    width: 65%;
+    margin-left: 18%;
     margin-top: 20px;
 
     p {
@@ -38,7 +38,7 @@
 }
 
    .transferClassName{
-        margin-left: 50%;
+        margin-left: 56%;
     }
 
     .transferClassNameForButton, .withdrawClassName,.depositClassNameForButton{
@@ -62,5 +62,9 @@
 
  .inputClassName{
      margin-left: 30%;
-     width: 10% !important
+     width: 40% !important;
+     margin-top : 2%;
+     margin-bottom: 2%;
+     background-color: rgb(199, 199, 199);
+     border-radius: 5px;
  }
